# whispercrawler

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Documentation.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  benchmarks.py  codebase_report.md  output.md  pyproject.toml  run_demo.py  server.json  setup.cfg
.github/workflows/: ci.yml
docs/: benchmarks.md  index.md  overview.md  requirements.txt
docs/ai/: ai-provider-integration.md  mcp-server.md
docs/api-reference/: custom-types.md  fetchers.md  mcp-server.md  proxy-rotation.md  response.md  selector.md  spiders.md
docs/cli/: extract-commands.md  interactive-shell.md  overview.md
docs/development/: adaptive_storage_system.md  scrapling_custom_types.md
docs/fetching/: choosing.md  dynamic.md  static.md  stealthy.md
docs/overrides/: main.html
docs/parsing/: adaptive.md  main_classes.md  selection.md
docs/spiders/: advanced.md  architecture.md  getting-started.md  proxy-blocking.md  requests-responses.md  sessions.md
docs/tutorials/: migrating_from_beautifulsoup.md  replacing_ai.md
whispercrawler/: __init__.py  cli.py  mcp_server.py  parser.py  proxy.py  shell.py
whispercrawler-skill/: README.md  SKILL.md
whispercrawler-skill/examples/: 01_fetcher_session.py  02_dynamic_session.py  03_stealthy_session.py  04_spider.py  README.md
whispercrawler-skill/references/: mcp-server.md  migrating_from_beautifulsoup.md
whispercrawler-skill/references/fetching/: choosing.md  dynamic.md  static.md  stealthy.md
whispercrawler-skill/references/parsing/: adaptive.md  main_classes.md  selection.md
whispercrawler-skill/references/spiders/: advanced.md  architecture.md  getting-started.md  proxy-blocking.md  requests-responses.md  sessions.md
whispercrawler/core/: _custom_types.py  _shell_signatures.py  _storage.py  _types.py  _validators.py  ai.py  analyzer.py  captcha.py  custom_types.py  mixins.py  pagination.py  regex.py  schema.py  shell.py  storage.py  translator.py
whispercrawler/engines/: static.py
whispercrawler/fetchers/: __init__.py  chrome.py  requests.py  shadow.py  stealth_chrome.py
whispercrawler/integrations/: __init__.py  scrapy.py
whispercrawler/spiders/: __init__.py  checkpoint.py  engine.py  request.py  result.py  scheduler.py  session.py  spider.py
(+51 files in other folders)
