[metadata]
name = whispercrawler
version = 0.1.1
author = Saravanan P V
author_email = 
description = WhisperCrawler is an undetectable, powerful, flexible, high-performance Python library that makes Web Scraping easy and effortless as it should be!
license = MIT
home_page = https://github.com/WhisperCrawl/WhisperCrawler
